# oz_django

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_django8/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_unique_like.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_like_service.py
